tests/neg/arrays/25-array.ts

declare function uniqueAlias(x: UArray<number>, y: UArray<number>): void;

let a = new Array<number>(10);

uniqueAlias(a, a);
